Revamped .custom-scrollbar (Chrome 121 adopts W3C standards now)

--- a/src/Smartstore.Web/wwwroot/shared/_custom-scrollbar.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_custom-scrollbar.scss
@@ -1,5 +1,22 @@
 /// <reference path="references.scss" />
 
+
+// W3C standards
+// ------------------------------
+
+.scrollbar-thin {
+    scrollbar-width: thin !important;
+}
+
+.scrollbar-none {
+    scrollbar-width: none !important;
+}
+
+.scrollbar-invert {
+    scrollbar-color: rgba(#fff, 0.3) transparent !important;
+}
+
+
 // Common
 // ------------------------------
 
@@ -14,16 +31,14 @@
     --scrollbar-thumb-color: rgba(var(--scrollbar-base-color-rgb), 0.3);
     --scrollbar-thumb-hover-color: rgba(var(--scrollbar-base-color-rgb), 0.5);
     --scrollbar-thumb-active-color: rgba(var(--scrollbar-base-color-rgb), 0.6);
+
     overflow-x: var(--overflow-x, hidden) !important;
     overflow-y: var(--overflow-y, auto) !important;
 
+    scrollbar-width: auto;
+
     &.custom-scrollbar-invert {
         --scrollbar-base-color-rgb: 255, 255, 255;
-    }
-
-    // For Firefox
-    .moz & {
-        scrollbar-width: thin;
     }
 }
 
@@ -123,4 +138,24 @@
 .custom-scrollbar.custom-scrollbar-overlay:hover::-webkit-scrollbar-thumb,
 .custom-scrollbar.custom-scrollbar-overlay:hover::-webkit-scrollbar-track {
     display: block;
+}
+
+
+// For Firefox & Safari
+// ------------------------------
+
+@supports #{'\not selector(*::-webkit-scrollbar)'} {
+    // For Firefox & Safari
+    .custom-scrollbar {
+        scrollbar-width: thin;
+        scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
+    }
+
+    .custom-scrollbar-overlay {
+        scrollbar-color: transparent transparent;
+
+        &:hover {
+            scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
+        }
+    }
 }
