Summernote: Emoji localization & search (wip)

--- a/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
+++ b/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
@@ -865,16 +865,32 @@ $img-margin-right: 10px;
 // Emojis
 // ------------------------------------------
 
-.note-emoji-list {
+.note-dropdown-emoji {
     --note-emoji-size: 40px;
     --note-emoji-gap: 1px;
-    --note-emoji-cols: 9;
-    min-height: 200px;
-    max-height: 300px;
-    width: calc(var(--note-emoji-size) * var(--note-emoji-cols) + (var(--note-emoji-gap) * var(--note-emoji-cols)) + 18px);
+    --note-emoji-cols: 10;
+    --note-emoji-padding: 0.5rem;
+    overflow: hidden;
+    height: 400px;
+    width: calc(var(--note-emoji-size) * var(--note-emoji-cols) + (var(--note-emoji-gap) * var(--note-emoji-cols)) + (var(--note-emoji-padding) * 2) + 18px);
+    flex-flow: column;
+
+    &.show {
+        display: flex;
+    }
+}
+
+.note-emoji-searchbox {
+    padding-inline: var(--note-emoji-padding);
+}
+
+.note-emoji-list {
     gap: var(--note-emoji-gap);
     overflow-y: auto;
     scrollbar-gutter: stable;
+    margin: var(--note-emoji-padding);
+    margin-inline-end: 0;
+    padding-inline-end: var(--note-emoji-padding);
 }
 
 .nav-emoji {
