Save cookie consent info in database (wip)

--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/Edit.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/Edit.cshtml
@@ -69,4 +69,9 @@
 @if (Model.Id != 0)
 {
     <partial name="_ChangePasswordPopup" model="new CustomerModel.ChangePasswordModel { Id = Model.Id }" />
+
+    if (Model.CookieConsent != null)
+    {
+        <partial name="_CookieConsentPopup" model="Model.CookieConsent" />
+    }
 }
