﻿Consent cookie popup review

--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -747,6 +747,8 @@ legend {
 }
 
 .adminContent {
+    --adminRow-margin-y: 0.8rem;
+
     display: block;
     width: 100%;
     margin-right: auto;
@@ -774,8 +776,7 @@ legend {
 
     div.adminRow {
         // div type rows do margin collapse, fix it.
-        margin-top: 0.8rem;
-        margin-bottom: 0.8rem;
+        margin-block: var(--adminRow-margin-y, 0.8rem);
     }
 
     .adminTitle,
