--- a/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
@@ -23,7 +23,7 @@
     <tr sm-if="Model.DisplayWeight" class="cart-summary-weight">
         <td class="cart-summary-label">@T("ShoppingCart.Weight"):</td>
         <td class="cart-summary-value">
-            <span>@(Model.Weight.ToString("N2"))</span>
+            <span>@(Model.Weight.ToString("G29"))</span>
             <span>@Model.WeightMeasureUnitName</span>
         </td>
     </tr>
