--- a/src/Smartstore.Web/Areas/Admin/Views/Order/OrderSettings.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Order/OrderSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@using Smartstore.Core.Checkout.Orders
+﻿@using Smartstore.Admin.Models.Orders
  
 @model OrderSettingsModel
 
@@ -7,7 +7,7 @@
     Layout = "_SettingLayout";
 }
 
-<form asp-action="Order">
+<form asp-action="OrderSettings">
     <div class="section-header">
         <div class="title">
             <i class="far fa-chart-bar"></i>
