--- a/src/Smartstore.Web/Areas/Admin/Views/ShoppingCart/ShoppingCartSettings.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/ShoppingCart/ShoppingCartSettings.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Smartstore.Core.Checkout.Cart
+@using Smartstore.Admin.Models.Cart
  
 @model ShoppingCartSettingsModel
 
@@ -7,7 +8,7 @@
     Layout = "_SettingLayout";
 }
 
-<form asp-action="ShoppingCart">
+<form asp-action="ShoppingCartSettings">
     <div class="section-header">
         <div class="title">
             <i class="fa fa-shopping-cart"></i>
