--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/Grids/_Grid.Cookies.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/Grids/_Grid.Cookies.cshtml
@@ -41,13 +41,13 @@
 <script sm-target-zone="scripts" data-origin="cookieInfos-grid">
     $(function () {
         $("#add-cookie-info-button").on("click", function (e) {
-            openPopup('@(Url.Action("CookieInfoCreatePopup", "Setting"))', false);
+            openPopup('@(Url.Action("CookieInfoCreatePopup", "Customer"))', false);
             return false;
         });
 
         $(document).on('click', '.edit-cookie-infos', function (e) {
             e.preventDefault();
-            var href = '@Url.Action("CookieInfoEditPopup", "Setting")?name=' + $(this).data("key");
+            var href = '@Url.Action("CookieInfoEditPopup", "Customer", new { area = "Admin" })?name=' + $(this).data("key");
 			openPopup(href, false);
 			return false;
 		});
