SettingController: Move all setting related actions to specific controllers (wip)

--- a/src/Smartstore.Web/Areas/Admin/Views/Product/Partials/GroupedProductSettings.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/Partials/GroupedProductSettings.cshtml
@@ -1,4 +1,6 @@
-﻿@model GroupedProductSettingsModel
+﻿@using Smartstore.Admin.Models.Catalog
+
+@model GroupedProductSettingsModel
 
 <div class="adminContent">
     <div class="adminRow">
