--- a/src/Smartstore.Web/Areas/Admin/Views/Media/MediaSettings.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Media/MediaSettings.cshtml
@@ -1,12 +1,13 @@
-﻿@model MediaSettingsModel
+﻿@using Smartstore.Admin.Models.Media
+
+@model MediaSettingsModel
 
 @{
     ViewBag.Title = T("Admin.Configuration.Settings.Media").Value;
     Layout = "_SettingLayout";
 }
 
-<form asp-action="Media">
-
+<form asp-action="MediaSettings">
     <div class="section-header">
         <div class="title">
             <i class="far fa-image"></i>
@@ -289,7 +290,7 @@
                     <div class="adminData">
                         <select asp-for="StorageProvider" asp-items="ViewBag.AvailableStorageProviders"></select>
 
-                        <button type="button" id="MoveMediaButton" class="btn btn-danger mt-3" data-url="@Url.Action("ChangeMediaStorage")">
+                        <button type="button" id="MoveMediaButton" class="btn btn-danger mt-3" data-url="@Url.Action("ChangeMediaStorage", "Media", new { area = "Admin" })">
                             <i class="fa fa-fw fa-dolly"></i>
                             <span>@(T("Admin.Common.MoveNow"))!</span>
                         </button>
