--- a/src/Smartstore.Web/Areas/Admin/Views/Payment/PaymentSettings.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Payment/PaymentSettings.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Smartstore.Core.Checkout.Payment
+@using Smartstore.Admin.Models.Payments
 
 @model PaymentSettingsModel
 
@@ -7,7 +8,7 @@
     Layout = "_SettingLayout";
 }
 
-<form asp-action="Payment">
+<form asp-action="PaymentSettings">
     <div class="section-header">
         <div class="title">
             <i class="far fa-credit-card"></i>
