--- a/src/Smartstore.Web/Areas/Admin/Views/Product/CatalogSettings.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/CatalogSettings.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Smartstore.Core.Catalog
 @using Smartstore.Core.Catalog.Products
 @using Smartstore.Core.Catalog.Pricing
+@using Smartstore.Admin.Models.Catalog
 
 @model CatalogSettingsModel
 
@@ -9,7 +10,7 @@
     ViewBag.Title = T("Admin.Configuration.Settings.Catalog").Value;
 }
 
-<form asp-action="Catalog">
+<form asp-action="CatalogSettings">
     <div class="section-header">
         <div class="title">
             <i class="fa fa-book"></i>
@@ -663,7 +664,7 @@
                 var groupedProductViewData = new ViewDataDictionary(ViewData);
                 groupedProductViewData.TemplateInfo.HtmlFieldPrefix = nameof(Model.GroupedProductSettings);
             }
-            <partial name="Catalog.GroupedProduct" model="Model.GroupedProductSettings" view-data="groupedProductViewData" />
+            <partial name="GroupedProductSettings" model="Model.GroupedProductSettings" view-data="groupedProductViewData" />
 
         </tab>
         <tab sm-title="@T("Admin.Configuration.Settings.Catalog.UserSettings")">
@@ -830,7 +831,7 @@
             </div>
         </tab>
         <tab sm-title="@T("Admin.Configuration.Settings.Price")">
-            <partial name="Price" model="@Model" />
+            <partial name="PriceSettings" model="@Model" />
         </tab>
     </tabstrip>
 </form>
