Added setting to add alternate links (xhtml:link) for localized page versions to the XML Sitemap

--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
@@ -288,6 +288,15 @@
                 <div id="xml-sitemap">
                     <div class="adminRow">
                         <div class="adminTitle">
+                            <smart-label asp-for="SeoSettings.AddAlternateSitemapLinks" />
+                        </div>
+                        <div class="adminData">
+                            <setting-editor asp-for="SeoSettings.AddAlternateSitemapLinks"></setting-editor>
+                            <span asp-validation-for="SeoSettings.AddAlternateSitemapLinks"></span>
+                        </div>
+                    </div>
+                    <div class="adminRow">
+                        <div class="adminTitle">
                             <smart-label asp-for="SeoSettings.XmlSitemapIncludesProducts" />
                         </div>
                         <div class="adminData">
