--- a/src/Smartstore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
@@ -6,6 +6,7 @@
     Assets.AppendTitleParts(Model.MetaTitle.HasValue() ? Model.MetaTitle : Model.Name);
     Assets.AppendMetaDescriptionParts(Model.MetaDescription);
     Assets.AppendMetaKeywordsParts(Model.MetaKeywords);
+    Assets.AppendLocalizedLinkEntries(Model.LocalizedLinkEntries);
 
     if (Model.CanonicalUrl.HasValue())
     {
