--- a/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Smartstore.Web.Components
+
+@{
     var localizedUrls = ViewBag.LocalizedUrls as List<LocalizedUrl>;
     if (localizedUrls.Count <= 1)
     {
@@ -22,12 +24,12 @@
             var returnUrl = localizedUrl.Url;
             var href = Display.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnUrl=" + returnUrl.UrlEncode());
 
-            <a href="@href" 
-                title="@lang.LocalizedName (@lang.UniqueSeoCode.ToUpper())" 
-                rel="nofollow" 
-                class="dropdown-item" attr-class='(lang.Id == activeLang.Id, "disabled")'
-                data-selected="@(lang.Equals(activeLang) ? "true" : "false")"
-                data-abbreviation="@name">
+            <a href="@href"
+               title="@lang.LocalizedName (@lang.UniqueSeoCode.ToUpper())"
+               rel="nofollow"
+               class="dropdown-item" attr-class='(lang.Id == activeLang.Id, "disabled")'
+               data-selected="@(lang.Equals(activeLang) ? "true" : "false")"
+               data-abbreviation="@name">
                 @if (ViewBag.UseImages == true)
                 {
                     <img src="@Url.Content("~/images/flags/" + lang.FlagImageFileName)" alt="@lang.FlagImageFileName" />
